// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseline styles 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.text-0\\\\/0 {
  display: block;
  font-size: 10px;
  line-height: 10px;
  transform: translateY(1.3636363636363642px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/1 {
  display: block;
  font-size: 10px;
  line-height: 20px;
  transform: translateY(6.363636363636364px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/1:before {
  content: '';
  margin-top: -11px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/2 {
  display: block;
  font-size: 10px;
  line-height: 30px;
  transform: translateY(11.363636363636363px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/2:before {
  content: '';
  margin-top: -21px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/0 {
  display: block;
  font-size: 20px;
  line-height: 20px;
  transform: translateY(2.7272727272727284px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/1 {
  display: block;
  font-size: 20px;
  line-height: 30px;
  transform: translateY(7.727272727272728px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/1:before {
  content: '';
  margin-top: -11px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/2 {
  display: block;
  font-size: 20px;
  line-height: 40px;
  transform: translateY(12.727272727272728px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/2:before {
  content: '';
  margin-top: -21px;
  display: block;
  height: 0;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    display: block;
    font-size: 10px;
    line-height: 10px;
    transform: translateY(1.3636363636363642px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    display: block;
    font-size: 10px;
    line-height: 20px;
    transform: translateY(6.363636363636364px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1:before {
    content: '';
    margin-top: -11px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    display: block;
    font-size: 10px;
    line-height: 30px;
    transform: translateY(11.363636363636363px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2:before {
    content: '';
    margin-top: -21px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    display: block;
    font-size: 20px;
    line-height: 20px;
    transform: translateY(2.7272727272727284px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    display: block;
    font-size: 20px;
    line-height: 30px;
    transform: translateY(7.727272727272728px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1:before {
    content: '';
    margin-top: -11px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    display: block;
    font-size: 20px;
    line-height: 40px;
    transform: translateY(12.727272727272728px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2:before {
    content: '';
    margin-top: -21px;
    display: block;
    height: 0;
  }
}"
`;

exports[`capheight styles 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.capheight-0\\\\/0 {
  display: block;
  font-size: 10px;
  line-height: 7.272727272727273px;
  transform: translateY(8.881784197001252e-16px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/1 {
  display: block;
  font-size: 10px;
  line-height: 17.272727272727273px;
  transform: translateY(5.000000000000001px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/1:before {
  content: '';
  margin-top: -11px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/2 {
  display: block;
  font-size: 10px;
  line-height: 27.272727272727273px;
  transform: translateY(10px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/2:before {
  content: '';
  margin-top: -21px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/0 {
  display: block;
  font-size: 20px;
  line-height: 14.545454545454547px;
  transform: translateY(1.7763568394002505e-15px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/1 {
  display: block;
  font-size: 20px;
  line-height: 24.545454545454547px;
  transform: translateY(5.000000000000002px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/1:before {
  content: '';
  margin-top: -11px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/2 {
  display: block;
  font-size: 20px;
  line-height: 34.54545454545455px;
  transform: translateY(10.000000000000002px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/2:before {
  content: '';
  margin-top: -21px;
  display: block;
  height: 0;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:capheight-0\\\\/0 {
    display: block;
    font-size: 10px;
    line-height: 7.272727272727273px;
    transform: translateY(8.881784197001252e-16px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1 {
    display: block;
    font-size: 10px;
    line-height: 17.272727272727273px;
    transform: translateY(5.000000000000001px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1:before {
    content: '';
    margin-top: -11px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2 {
    display: block;
    font-size: 10px;
    line-height: 27.272727272727273px;
    transform: translateY(10px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2:before {
    content: '';
    margin-top: -21px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0 {
    display: block;
    font-size: 20px;
    line-height: 14.545454545454547px;
    transform: translateY(1.7763568394002505e-15px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1 {
    display: block;
    font-size: 20px;
    line-height: 24.545454545454547px;
    transform: translateY(5.000000000000002px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1:before {
    content: '';
    margin-top: -11px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2 {
    display: block;
    font-size: 20px;
    line-height: 34.54545454545455px;
    transform: translateY(10.000000000000002px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2:before {
    content: '';
    margin-top: -21px;
    display: block;
    height: 0;
  }
}"
`;

exports[`measure styles 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.measure-0 {
  max-width: 10ch
}

.measure-1 {
  max-width: 20ch
}

@media (min-width: 640px) {
  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:measure-0 {
    max-width: 10ch
  }

  .sm\\\\:measure-1 {
    max-width: 20ch
  }
}"
`;

exports[`rhythm styles 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.rhythm-0 > * + * {
  margin-top: 0px
}

.rhythm-y-0 > * + * {
  margin-top: 0px
}

.rhythm-x-0 > * + * {
  margin-left: 0px
}

.rhythm-1 > * + * {
  margin-top: 10px
}

.rhythm-y-1 > * + * {
  margin-top: 10px
}

.rhythm-x-1 > * + * {
  margin-left: 10px
}

.rhythm-2 > * + * {
  margin-top: 20px
}

.rhythm-y-2 > * + * {
  margin-top: 20px
}

.rhythm-x-2 > * + * {
  margin-left: 20px
}

@media (min-width: 640px) {
  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0px
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0px
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0px
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 10px
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 10px
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 10px
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 20px
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 20px
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 20px
  }
}"
`;

exports[`use px 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.text-0\\\\/0 {
  display: block;
  font-size: 10px;
  line-height: 10px;
  transform: translateY(1.3636363636363642px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/0 {
  display: block;
  font-size: 10px;
  line-height: 7.272727272727273px;
  transform: translateY(8.881784197001252e-16px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/1 {
  display: block;
  font-size: 10px;
  line-height: 20px;
  transform: translateY(6.363636363636364px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/1:before {
  content: '';
  margin-top: -11px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/1 {
  display: block;
  font-size: 10px;
  line-height: 17.272727272727273px;
  transform: translateY(5.000000000000001px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/1:before {
  content: '';
  margin-top: -11px;
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/2 {
  display: block;
  font-size: 10px;
  line-height: 30px;
  transform: translateY(11.363636363636363px);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/2:before {
  content: '';
  margin-top: -21px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/2 {
  display: block;
  font-size: 10px;
  line-height: 27.272727272727273px;
  transform: translateY(10px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/2:before {
  content: '';
  margin-top: -21px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/0 {
  display: block;
  font-size: 20px;
  line-height: 20px;
  transform: translateY(2.7272727272727284px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/0 {
  display: block;
  font-size: 20px;
  line-height: 14.545454545454547px;
  transform: translateY(1.7763568394002505e-15px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/1 {
  display: block;
  font-size: 20px;
  line-height: 30px;
  transform: translateY(7.727272727272728px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/1:before {
  content: '';
  margin-top: -11px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/1 {
  display: block;
  font-size: 20px;
  line-height: 24.545454545454547px;
  transform: translateY(5.000000000000002px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/1:before {
  content: '';
  margin-top: -11px;
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/2 {
  display: block;
  font-size: 20px;
  line-height: 40px;
  transform: translateY(12.727272727272728px);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/2:before {
  content: '';
  margin-top: -21px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/2 {
  display: block;
  font-size: 20px;
  line-height: 34.54545454545455px;
  transform: translateY(10.000000000000002px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/2:before {
  content: '';
  margin-top: -21px;
  display: block;
  height: 0;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-image: linear-gradient(
		rgba(255, 0, 255, 0.3) 1px,
		transparent 0
	);
  background-size: 100% 10px;
}

.measure-0 {
  max-width: 10ch;
}

.measure-1 {
  max-width: 20ch;
}

.rhythm-0 > * + * {
  margin-top: 0px;
}

.rhythm-y-0 > * + * {
  margin-top: 0px;
}

.rhythm-x-0 > * + * {
  margin-left: 0px;
}

.rhythm-1 > * + * {
  margin-top: 10px;
}

.rhythm-y-1 > * + * {
  margin-top: 10px;
}

.rhythm-x-1 > * + * {
  margin-left: 10px;
}

.rhythm-2 > * + * {
  margin-top: 20px;
}

.rhythm-y-2 > * + * {
  margin-top: 20px;
}

.rhythm-x-2 > * + * {
  margin-left: 20px;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    display: block;
    font-size: 10px;
    line-height: 10px;
    transform: translateY(1.3636363636363642px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0 {
    display: block;
    font-size: 10px;
    line-height: 7.272727272727273px;
    transform: translateY(8.881784197001252e-16px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    display: block;
    font-size: 10px;
    line-height: 20px;
    transform: translateY(6.363636363636364px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1:before {
    content: '';
    margin-top: -11px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1 {
    display: block;
    font-size: 10px;
    line-height: 17.272727272727273px;
    transform: translateY(5.000000000000001px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1:before {
    content: '';
    margin-top: -11px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    display: block;
    font-size: 10px;
    line-height: 30px;
    transform: translateY(11.363636363636363px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2:before {
    content: '';
    margin-top: -21px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2 {
    display: block;
    font-size: 10px;
    line-height: 27.272727272727273px;
    transform: translateY(10px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2:before {
    content: '';
    margin-top: -21px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    display: block;
    font-size: 20px;
    line-height: 20px;
    transform: translateY(2.7272727272727284px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0 {
    display: block;
    font-size: 20px;
    line-height: 14.545454545454547px;
    transform: translateY(1.7763568394002505e-15px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    display: block;
    font-size: 20px;
    line-height: 30px;
    transform: translateY(7.727272727272728px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1:before {
    content: '';
    margin-top: -11px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1 {
    display: block;
    font-size: 20px;
    line-height: 24.545454545454547px;
    transform: translateY(5.000000000000002px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1:before {
    content: '';
    margin-top: -11px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    display: block;
    font-size: 20px;
    line-height: 40px;
    transform: translateY(12.727272727272728px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2:before {
    content: '';
    margin-top: -21px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2 {
    display: block;
    font-size: 20px;
    line-height: 34.54545454545455px;
    transform: translateY(10.000000000000002px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2:before {
    content: '';
    margin-top: -21px;
    display: block;
    height: 0;
  }

  .sm\\\\:measure-0 {
    max-width: 10ch;
  }

  .sm\\\\:measure-1 {
    max-width: 20ch;
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0px;
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 10px;
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 10px;
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 10px;
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 20px;
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 20px;
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 20px;
  }
}"
`;

exports[`use rem 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.text-0\\\\/0 {
  display: block;
  font-size: 1rem;
  line-height: 1;
  transform: translateY(0.1363636363636364em);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/0:before {
  content: '';
  margin-top: calc(-0.1em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/0 {
  display: block;
  font-size: 1rem;
  line-height: 0.7272727272727273;
  transform: translateY(8.881784197001253e-17em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/0:before {
  content: '';
  margin-top: calc(-0.1em );
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/1 {
  display: block;
  font-size: 1rem;
  line-height: 2;
  transform: translateY(0.6363636363636365em);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/1:before {
  content: '';
  margin-top: calc(-1.1em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/1 {
  display: block;
  font-size: 1rem;
  line-height: 1.7272727272727273;
  transform: translateY(0.5000000000000001em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/1:before {
  content: '';
  margin-top: calc(-1.1em );
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/2 {
  display: block;
  font-size: 1rem;
  line-height: 3;
  transform: translateY(1.1363636363636362em);
  padding-top: 1px;
}

.font-sans-400.text-0\\\\/2:before {
  content: '';
  margin-top: calc(-2.1em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/2 {
  display: block;
  font-size: 1rem;
  line-height: 2.7272727272727275;
  transform: translateY(1em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/2:before {
  content: '';
  margin-top: calc(-2.1em );
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/0 {
  display: block;
  font-size: 2rem;
  line-height: 1;
  transform: translateY(0.1363636363636364em);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/0:before {
  content: '';
  margin-top: calc(-0.05em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/0 {
  display: block;
  font-size: 2rem;
  line-height: 0.7272727272727273;
  transform: translateY(8.881784197001253e-17em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/0:before {
  content: '';
  margin-top: calc(-0.05em );
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/1 {
  display: block;
  font-size: 2rem;
  line-height: 1.5;
  transform: translateY(0.3863636363636364em);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/1:before {
  content: '';
  margin-top: calc(-0.55em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/1 {
  display: block;
  font-size: 2rem;
  line-height: 1.2272727272727273;
  transform: translateY(0.2500000000000001em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/1:before {
  content: '';
  margin-top: calc(-0.55em );
  display: block;
  height: 0;
}

.font-sans-400.text-1\\\\/2 {
  display: block;
  font-size: 2rem;
  line-height: 2;
  transform: translateY(0.6363636363636365em);
  padding-top: 1px;
}

.font-sans-400.text-1\\\\/2:before {
  content: '';
  margin-top: calc(-1.05em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/2 {
  display: block;
  font-size: 2rem;
  line-height: 1.7272727272727273;
  transform: translateY(0.5000000000000001em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/2:before {
  content: '';
  margin-top: calc(-1.05em );
  display: block;
  height: 0;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 1rem;
  background-image: linear-gradient(
		rgba(255, 0, 255, 0.3) 1px,
		transparent 0
	);
}

.measure-0 {
  max-width: 10ch;
}

.measure-1 {
  max-width: 20ch;
}

.rhythm-0 > * + * {
  margin-top: 0rem;
}

.rhythm-y-0 > * + * {
  margin-top: 0rem;
}

.rhythm-x-0 > * + * {
  margin-left: 0rem;
}

.rhythm-1 > * + * {
  margin-top: 1rem;
}

.rhythm-y-1 > * + * {
  margin-top: 1rem;
}

.rhythm-x-1 > * + * {
  margin-left: 1rem;
}

.rhythm-2 > * + * {
  margin-top: 2rem;
}

.rhythm-y-2 > * + * {
  margin-top: 2rem;
}

.rhythm-x-2 > * + * {
  margin-left: 2rem;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    display: block;
    font-size: 1rem;
    line-height: 1;
    transform: translateY(0.1363636363636364em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0:before {
    content: '';
    margin-top: calc(-0.1em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0 {
    display: block;
    font-size: 1rem;
    line-height: 0.7272727272727273;
    transform: translateY(8.881784197001253e-17em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0:before {
    content: '';
    margin-top: calc(-0.1em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    display: block;
    font-size: 1rem;
    line-height: 2;
    transform: translateY(0.6363636363636365em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1:before {
    content: '';
    margin-top: calc(-1.1em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1 {
    display: block;
    font-size: 1rem;
    line-height: 1.7272727272727273;
    transform: translateY(0.5000000000000001em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1:before {
    content: '';
    margin-top: calc(-1.1em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    display: block;
    font-size: 1rem;
    line-height: 3;
    transform: translateY(1.1363636363636362em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2:before {
    content: '';
    margin-top: calc(-2.1em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2 {
    display: block;
    font-size: 1rem;
    line-height: 2.7272727272727275;
    transform: translateY(1em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2:before {
    content: '';
    margin-top: calc(-2.1em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    display: block;
    font-size: 2rem;
    line-height: 1;
    transform: translateY(0.1363636363636364em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0:before {
    content: '';
    margin-top: calc(-0.05em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0 {
    display: block;
    font-size: 2rem;
    line-height: 0.7272727272727273;
    transform: translateY(8.881784197001253e-17em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0:before {
    content: '';
    margin-top: calc(-0.05em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    display: block;
    font-size: 2rem;
    line-height: 1.5;
    transform: translateY(0.3863636363636364em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1:before {
    content: '';
    margin-top: calc(-0.55em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1 {
    display: block;
    font-size: 2rem;
    line-height: 1.2272727272727273;
    transform: translateY(0.2500000000000001em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1:before {
    content: '';
    margin-top: calc(-0.55em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    display: block;
    font-size: 2rem;
    line-height: 2;
    transform: translateY(0.6363636363636365em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2:before {
    content: '';
    margin-top: calc(-1.05em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2 {
    display: block;
    font-size: 2rem;
    line-height: 1.7272727272727273;
    transform: translateY(0.5000000000000001em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2:before {
    content: '';
    margin-top: calc(-1.05em );
    display: block;
    height: 0;
  }

  .sm\\\\:measure-0 {
    max-width: 10ch;
  }

  .sm\\\\:measure-1 {
    max-width: 20ch;
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0rem;
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0rem;
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0rem;
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 1rem;
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 1rem;
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 1rem;
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 2rem;
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 2rem;
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 2rem;
  }
}"
`;
